@@ -9,7 +9,7 @@
     v1                        :           r3, after r2, 200d
 
     section Publication
-    Write manuscript          :done,      m1, 2023-01-01, 110d
+    Manuscript                :done,      m1, 2023-01-01, 110d
     Submission                :done,      m2, after m1, 260d
     Paper published           :milestone, after m2, 0d
 
